fix mobile menu height and z-index

--- a/src/app/work-modal/work-modal.component.scss
+++ b/src/app/work-modal/work-modal.component.scss
@@ -78,6 +78,7 @@ p {
   .modalContainer {
     align-items: center;
     overflow: scroll;
+    height: 100vh;
   }
   .exampleTitle {
     margin: 0;
