--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,7 +90,8 @@ input, textarea {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  z-index: 99;
 }
 .appContainer{
   width: 100%;
